maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:5: error: value unary_! is not a member of Int
    if((!(isDirectionFree(Direction.NORTH)))&&(!cmpt==0)) {
                                               ^